--- a/Form.html
+++ b/Form.html
@@ -77,7 +77,7 @@
         <label for="Payment">Payment Details:
             <input type="radio" name="Payment" id="Payment" value="Cash" />Cash
             <input type="radio" name="Payment" id="Payment" value="Check" />Check
-            <input type="radio" name="Payemnt" id="Payment" value="Card" />Card
+            <input type="radio" name="Payment" id="Payment" value="Card" />Card
         </label>
         <fieldset>
         <p style="background-color:blue;"><a href="terms" >Terms and Conditons</a></p>
